--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,23 @@ aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
 appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asgiref==3.8.1
 asttokens==2.4.1
+async-lru==2.0.4
 attrs==23.2.0
+Babel==2.14.0
 backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
+bleach==6.1.0
+bs4==0.0.2
 build==1.1.1
 cachetools==5.3.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.4.24
@@ -21,16 +29,21 @@ comm==0.2.2
 dataclasses-json==0.6.4
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
+dirtyjson==1.0.8
 distro==1.9.0
 executing==2.0.1
 fastapi==0.110.0
+fastjsonschema==2.19.1
 filelock==3.13.3
 flatbuffers==24.3.25
+fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.3.1
 google-auth==2.29.0
 googleapis-common-protos==1.63.0
+greenlet==3.0.3
 grpcio==1.62.1
 h11==0.14.0
 httpcore==1.0.4
@@ -43,13 +56,28 @@ importlib-metadata==6.11.0
 importlib_resources==6.4.0
 ipykernel==6.29.3
 ipython==8.22.2
+ipywidgets==8.1.2
+isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.3.2
+json5==0.9.24
 jsonpatch==1.33
 jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.4
 jupyter_client==8.6.1
 jupyter_core==5.7.2
+jupyter_server==2.13.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.4
+jupyterlab_widgets==3.0.10
 kubernetes==29.0.0
 langchain==0.1.13
 langchain-community==0.0.29
@@ -58,16 +86,41 @@ langchain-openai==0.1.1
 langchain-text-splitters==0.0.1
 langchainhub==0.1.15
 langsmith==0.1.31
+llama-index==0.10.24
+llama-index-agent-openai==0.1.7
+llama-index-cli==0.1.11
+llama-index-core==0.10.24.post1
+llama-index-embeddings-huggingface==0.2.0
+llama-index-embeddings-openai==0.1.7
+llama-index-indices-managed-llama-cloud==0.1.5
+llama-index-legacy==0.9.48
+llama-index-llms-ollama==0.1.2
+llama-index-llms-openai==0.1.13
+llama-index-multi-modal-llms-openai==0.1.4
+llama-index-program-openai==0.1.4
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.12
+llama-index-readers-llama-parse==0.1.4
+llama-parse==0.4.0
+llamaindex-py-client==0.1.13
 MarkupSafe==2.1.5
 marshmallow==3.21.1
 matplotlib-inline==0.1.6
+minijinja==1.0.14
+mistune==3.0.2
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.3
 nest-asyncio==1.6.0
 networkx==3.2.1
+nltk==3.8.1
+notebook==7.1.2
+notebook_shim==0.2.4
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.17.1
@@ -85,11 +138,14 @@ opentelemetry-util-http==0.44b0
 orjson==3.9.15
 overrides==7.7.0
 packaging==23.2
+pandas==2.2.1
+pandocfilters==1.5.1
 parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
 posthog==3.5.0
+prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 protobuf==4.25.3
 psutil==5.9.8
@@ -98,22 +154,35 @@ pulsar-client==3.4.0
 pure-eval==0.2.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments==2.17.2
+PyMuPDF==1.24.0
+PyMuPDFb==1.24.0
+pypdf==4.1.0
 PyPika==0.48.9
 pyproject_hooks==1.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-json-logger==2.0.7
+pytz==2024.1
 PyYAML==6.0.1
 pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.34.0
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.0
 rsa==4.9
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
+Send2Trash==1.8.2
 sentence-transformers==2.6.1
 setuptools==69.2.0
 six==1.16.0
@@ -122,10 +191,13 @@ soupsieve==2.5
 SQLAlchemy==2.0.29
 stack-data==0.6.3
 starlette==0.36.3
+striprtf==0.0.26
 sympy==1.12
 tenacity==8.2.3
+terminado==0.18.1
 threadpoolctl==3.4.0
 tiktoken==0.6.0
+tinycss2==1.2.1
 tokenizers==0.15.2
 torch==2.2.1
 tornado==6.4
@@ -133,16 +205,22 @@ tqdm==4.66.2
 traitlets==5.14.2
 transformers==4.39.1
 typer==0.10.0
+types-python-dateutil==2.9.0.20240316
 types-requests==2.31.0.20240311
 typing-inspect==0.9.0
 typing_extensions==4.10.0
+tzdata==2024.1
+uri-template==1.3.0
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
 wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
 websocket-client==1.7.0
 websockets==12.0
+widgetsnbextension==4.0.10
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.18.1
